--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Toteco_app"
         tools:targetApi="31">
         <activity
+            android:name=".LocationsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddEstablishmentActivity"
             android:exported="false" />
 
